change the ifram name attribute

--- a/DynamicReportsWithJSFServletsAndCDI/src/main/webapp/index.xhtml
+++ b/DynamicReportsWithJSFServletsAndCDI/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
 
 <h:body>
 	<h:form>
-		<iframe name="receipt" height="600" id="theIFrame" width="100%" src="http://localhost:8080/DynamicReportsWithJSFServletsAndCDI"/>
+		<iframe name="invoice" height="600" id="theIFrame" width="100%" src="http://localhost:8080/DynamicReportsWithJSFServletsAndCDI"/>
 	</h:form>
 </h:body>
 
